--- a/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
@@ -9,9 +9,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Page.DataContext>
-        <vm:CustomerViewModel/>
-    </Page.DataContext>
+
 
     <Page.Resources>
     </Page.Resources>
@@ -24,29 +22,54 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
+        <ContentDialog x:Name="CustomerDialog"
+                       Title="Customer Details"
+                       PrimaryButtonText="Save"
+                       CloseButtonText="Cancel"
+                       DefaultButton="Primary"
+                       PrimaryButtonCommand="{Binding SaveCustomerCommand}">
+            <StackPanel Spacing="12" Width="350">
+                <TextBox Header="Full Name" Text="{Binding FormFullName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Header="Phone" Text="{Binding FormPhone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Header="Address" Text="{Binding FormAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+        </ContentDialog>
+
         <!-- Header Controls -->
         <Grid Grid.Row="0" Margin="0,0,0,24">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <!-- Search -->
-            <TextBox PlaceholderText="Search customers..." Width="300" VerticalAlignment="Center" Margin="0,0,16,0"
-                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="8" Margin="0,0,16,0">
+                <TextBox PlaceholderText="Search Phone..." Width="150" 
+                         Text="{Binding SearchPhone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox PlaceholderText="Search Name..." Width="180" 
+                         Text="{Binding SearchName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
             
-            <Button Grid.Column="1" VerticalAlignment="Center" Margin="0,0,12,0">
+            <Button Grid.Column="1" VerticalAlignment="Center" Margin="0,0,12,0" Command="{Binding OpenAddDialogCommand}">
                 <StackPanel Orientation="Horizontal" Spacing="8">
-                    <FontIcon Glyph="&#xE710;"/>
-                    <TextBlock Text="Import/Add"/>
+                    <FontIcon Glyph="&#xE710;" FontSize="16"/>
+                    <TextBlock Text="Add Customer" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+
+            <Button Grid.Column="2" VerticalAlignment="Center" Margin="0,0,12,0">
+                <StackPanel Orientation="Horizontal" Spacing="8">
+                    <FontIcon Glyph="&#xE8B5;" FontSize="16" />
+                    <TextBlock Text="Import" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             
-            <Button Grid.Column="2" VerticalAlignment="Center">
+            <Button Grid.Column="3" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Spacing="8">
-                    <FontIcon Glyph="&#xE896;"/>
-                    <TextBlock Text="Export CSV"/>
+                    <FontIcon Glyph="&#xE74E;" FontSize="16"/>
+                    <TextBlock Text="Export CSV" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
         </Grid>
@@ -70,7 +93,7 @@
         </Border>
 
         <!-- Data List -->
-        <ListView Grid.Row="2" 
+        <ListView Grid.Row="2" x:Name="CustomerList"
                   ItemsSource="{Binding Customers}" 
                   SelectionMode="None"
                   Padding="0,0,12,0">
@@ -110,7 +133,7 @@
                             <FontIcon Glyph="&#xE712;"/>
                             <Button.Flyout>
                                 <MenuFlyout>
-                                    <MenuFlyoutItem Text="Edit"/>
+                                    <MenuFlyoutItem Text="Edit" Command="{Binding DataContext.OpenEditDialogCommand, ElementName=CustomerList}" CommandParameter="{Binding}"/>
                                     <MenuFlyoutItem Text="Delete" Foreground="Red"/>
                                 </MenuFlyout>
                             </Button.Flyout>
