--- a/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Pages/CustomerPage.xaml
@@ -52,12 +52,12 @@
                          Text="{Binding SearchName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
             
-            <Button Grid.Column="1" VerticalAlignment="Center" Margin="0,0,12,0" Command="{Binding OpenAddDialogCommand}">
+            <!-- <Button Grid.Column="1" VerticalAlignment="Center" Margin="0,0,12,0" Command="{Binding OpenAddDialogCommand}">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE710;" FontSize="16"/>
                     <TextBlock Text="Add Customer" VerticalAlignment="Center"/>
                 </StackPanel>
-            </Button>
+            </Button> -->
 
             <Button Grid.Column="2" VerticalAlignment="Center" Margin="0,0,12,0">
                 <StackPanel Orientation="Horizontal" Spacing="8">
