--- a/src/Frontend/MyShop-Frontend/Views/Pages/HelpPage.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Pages/HelpPage.xaml
@@ -32,7 +32,7 @@
     </Page.Resources>
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid Padding="24" MaxWidth="1200">
+        <Grid Padding="24">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
